--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                 <div class="feedback-card shadow">
                     <div class="feedback-detial d-flex flex-row">
-                        <img class = "feedback-avatar" src="images/avatar.png" alt="avatarIcon">
+                        <img class = "feedback-avatar" src="Images/avatar.png" alt="avatarIcon">
                         <h5>Ismail abobaker</h5>
                     </div>
 
