--- a/pages/Questions.html
+++ b/pages/Questions.html
@@ -20,8 +20,8 @@
             <hr>
             <a href="../index.html"><button class="btn-back-side">عودة</button></a>
             <div class="mood">
-                <button class="btn-dark active-btn">dark <img src="../images/icon-moon.svg" alt="icon"></button>
-                <button class="btn-light">light <img src="../images/icon-sun.svg" alt="icon"></button>
+                <button class="btn-dark active-btn">dark <img src="../Images/icon-moon.svg" alt="icon"></button>
+                <button class="btn-light">light <img src="../Images/icon-sun.svg" alt="icon"></button>
             </div>
         </div>
     </div>
@@ -29,7 +29,7 @@
     <div class="con">
         <div class="navpar">
             <div class="logo">
-                <img src="../images/H Logotype Orange copy.png" alt="logo">
+                <img src="../Images/H Logotype Orange copy.png" alt="logo">
             </div>
     
             <div class="nav-icons">
