--- a/pages/Questions.html
+++ b/pages/Questions.html
@@ -20,8 +20,8 @@
             <hr>
             <a href="../index.html"><button class="btn-back-side">عودة</button></a>
             <div class="mood">
-                <button class="btn-dark active-btn">dark <img src="../Images/icon-moon.svg" alt="icon"></button>
-                <button class="btn-light">light <img src="../Images/icon-sun.svg" alt="icon"></button>
+                <button class="btn-dark active-btn"><span>dark</span><img src="../Images/icon-moon.svg" alt="icon"></button>
+                <button class="btn-light"><span>light</span> <img src="../Images/icon-sun.svg" alt="icon"></button>
             </div>
         </div>
     </div>
@@ -29,12 +29,12 @@
     <div class="con">
         <div class="navpar">
             <div class="logo">
-                <img src="../Images/H Logotype Orange copy.png" alt="logo">
+                <img src="../Images/H Logotype Orange.svg" alt="logo">
             </div>
     
             <div class="nav-icons">
                 <a href="../index.html"><button class="btn-back">عودة</button></a>
-                <img onclick="openNav()" class = "Menu-icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAeElEQVR4nO3ZQQoCMRBFwRxPPXN+5yYjiPdQZqubAYNBqYLepyGLPNIaAAAAByS5JLlW1eOXZ9+h934+svBt9WEnzt3Cr/ZrkGT7gyu9jTFObwsCAPAtUUu1/F2slmpiHna1BADAHFFLtbp41FKppfK3BAAA0D7xBH8Vz6KPQsKFAAAAAElFTkSuQmCC">
+                <img onclick="openNav()" class = "Menu-icon" src="../Images/icons8-menu-96-_3_.svg" alt="menu-icon">
             </div>
         </div>
 
@@ -51,19 +51,34 @@
             </div>
 
             <div class="answer">
-                <form >
-                    <input class="answer" type="radio" name="answer" id="answer1">
-                    <label class="answer-label" for="answer1">علم المعادن والبلورات</label><br>
+                <form>
+                    <div class="true">
+                        <div class="radio-con">
+                            <input class="answer" type="radio" name="answer" value="" id="answer1">
+                            <label class="answer-label" for="answer1"></label>
+                        </div>
+                    </div>
 
-                    <input class="answer" type="radio" name="answer" id="answer2">
-                    <label class="answer-label" for="answer2">علم طبقات الارض</label><br>
+                    <div class="false">
+                        <div class="radio-con">
+                            <input class="answer" type="radio" name="answer" value="" id="answer2">
+                            <label class="answer-label" for="answer2"></label>
+                        </div>
+                    </div>
 
-                    <input class="answer" type="radio" name="answer" id="answer3">
-                    <label class="answer-label" for="answer3">الجيوكيماء</label><br>
-                    
+                    <div>
+                        <div class="radio-con">
+                            <input class="answer" type="radio" name="answer" value="" id="answer3">
+                            <label class="answer-label" for="answer3"></label>
+                        </div>
+                    </div>
 
-                    <input class="answer" type="radio" name="answer" id="answer4">
-                    <label class="answer-label" for="answer4">الجيوفيزياء</label><br>
+                    <div>
+                        <div class="radio-con">
+                            <input class="answer" type="radio" name="answer" value="" id="answer4">
+                            <label class="answer-label" for="answer4"></label>
+                        </div>
+                    </div>
                     <hr>
 
                     <div class="Questions-footer">
